--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "prisma": "^6.6.0",
